docs: update link from lip6 to inira

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -4,7 +4,7 @@
 % our implementation using the Menhir parser generator \cite{menhir}.
 
 This document presents the grammar of the SmPL language used by the
-\href{http://coccinelle.lip6.fr/}{Coccinelle tool}.  For the most
+\href{https://coccinelle.gitlabpages.inria.fr/website/}{Coccinelle tool}.  For the most
 part, the grammar is written using standard notation.  In some rules,
 however, the left-hand side is in all uppercase letters.  These are
 macros, which take one or more grammar rule right-hand-sides as
@@ -22,10 +22,10 @@ presence of that term is optional.
 %
 \ifhevea
 A PDF version of this documentation is available at
-\url{http://coccinelle.lip6.fr/docs/main_grammar.pdf}.
+\url{https://coccinelle.gitlabpages.inria.fr/website/docs/main_grammar.pdf}.
 \else
 An HTML version of this documentation is available online at
-\url{http://coccinelle.lip6.fr/docs/main_grammar.html}.
+\url{https://coccinelle.gitlabpages.inria.fr/website/docs/main_grammar.html}.
 \fi
 
 \section{Program}
