--- a/docs/manual/main.tex
+++ b/docs/manual/main.tex
@@ -149,7 +149,7 @@ Copyright \copyright~2008, 2009, Yoann Padioleau, Nicolas Palix, Julia Lawall, a
 \section*{Availability}
 
 Coccinelle can be freely downloaded
-from \url{http://coccinelle.lip6.fr}.\\
+from \url{https://coccinelle.gitlabpages.inria.fr/website}.\\
 This website contains also additional information and a wiki website.
 
 
