--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -371,7 +371,7 @@ The \NT{ctype} and \NT{ctypes} nonterminals are used by both the grammar of
 metavariable declarations and the grammar of transformations, and are
 defined on page~\pageref{types}.
 
-A {\bf constant} metavariabe matches a constant in the code, such as 27. It also
+A {\bf constant} metavariable matches a constant in the code, such as 27. It also
 considers an uppercase identifier as a constant as well, because the names given
 to macros in Linux usually have this form.
 
