for some reason type metavaraibles were not included in ctype, so use type instead

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -362,7 +362,7 @@ function, or generates side effects is matched as en expression.
 It is possible to specify some type information using {\bf enum}, {\bf struct},
 or {\bf union}, and/or a pointer level using {\tt *} to restrict the types of
 expressions that can be matched.
-It is possible to only match expressions of a specific \NT{ctype} or a set of
+It is possible to only match expressions of a specific \NT{type} or a set of
 them with a pointer level using {\tt *} by writing these instead of the
 {\bf expression} designator pattern. One can also specify the matched
 expression must be of array type by adding brackets after the initial type
