some fixes from Markus Elfring <Markus.Elfring@web.de>

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -330,7 +330,7 @@ metavariables (e.g. {\bf expression}).
 
 A {\bf type} matches a type appearing in code whether it is in the declaration
 of a function, a variable, in a cast or anywhere else where it is explicitly a
-type. It also matches a type name defined by a {\bf typedef}
+type. It also matches a type name defined by a {\bf typedef}.
 
 A {\bf statement} matches anything that falls into the statement definition of
 the C99 standard.
@@ -364,7 +364,7 @@ or {\bf union}, and/or a pointer level using {\tt *} to restrict the types of
 expressions that can be matched.
 It is possible to only match expressions of a specific \NT{type} or a set of
 them with a pointer level using {\tt *} by writing these instead of the
-{\bf expression} designator pattern. One can also specify the matched
+{\bf expression} designator pattern. One can also specify that the matched
 expression must be of array type by adding brackets after the initial type
 specification.
 The \NT{ctype} and \NT{ctypes} nonterminals are used by both the grammar of
