not exp when code on dots
Reported by Absoler, github issue #292

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -1787,7 +1787,7 @@ in a concise way.
   \RULE{\rt{dot\_expr}}
   \CASE{\NT{EXPR}\mth{(}\NT{dot\_expr}\mth{)}}
   \CASE{\NT{NEST}\mth{(}\NT{dot\_expr}, \NT{exp\_whencode}\mth{)}}
-  \CASE{...~\opt{\NT{exp\_whencode}}}
+  \CASE{...}
 
   \RULE{\rt{EXPR}\mth{(}\rt{exp}\mth{)}}
   \CASE{\NT{exp} \NT{assign\_op} \NT{exp}}
