disable optional_qualifier should impact the treatment of signed also
Signed is a sign qualifier, so it should be possible to disable its implicit matching.

Reported-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -136,7 +136,8 @@ behavior.  Using \NT{disable-iso} with the given name disables this behavior.
   register, or extern), matches a function declaration or variable
   declaration with any visibility or storage, respectively.
 \item \KW{optional\_qualifier}: This is similar to \KW{optional\_storage},
-  except that here it is the qualifier (i.e., const or volatile) that does
+  except that here it is the qualifier (i.e., const or volatile) or
+  sign qualifier (only signed) that does
   not have to be specified in the SmPL code, but may be present in the C code.
 \item \KW{optional\_attributes}: This is also similar to
   \KW{optional\_storage}, except that here it is an attribute (e.g.,
