--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -461,7 +461,7 @@ metavariables are only allowed in context or minus code, and not in added
 code.  Indeed, attributes in added code are not parsed, to allow them to be
 placed at places that go beyond what is supported by the SmPL parser.
 
-An {\bf attribute name} declaration indicates the given identifiers should be
+An {\bf attribute name} declaration indicates that the given identifiers should be
 considered to be attributes, e.g., \texttt{noinline}.
 
 A {\bf declarer} is a macro call used at top level which generates a
