remove out of date statement about where attribute metavariables can appear

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -456,10 +456,7 @@ redeclare a name as a typedef. A name declared as a typedef can, furthermore, be
 redeclared as another metavariable. It will be considered to be a metavariable
 in such rules, and will revert to being a typedef in subsequent rules.
 
-An {\bf attribute} metavariable matches an attribute.  {\bf Attribute}
-metavariables are only allowed in context or minus code, and not in added
-code.  Indeed, attributes in added code are not parsed, to allow them to be
-placed at places that go beyond what is supported by the SmPL parser.
+An {\bf attribute} metavariable matches any attribute.
 
 An {\bf attribute name} declaration indicates that the given identifiers should be
 considered to be attributes, e.g., \texttt{noinline}.
