attributes can now be removed

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -1291,7 +1291,7 @@ disjunction.  The following semantic patch rule is thus not allowed.
 \end{center}
 
 Some kinds of terms can only appear in + code.  These include comments,
-ifdefs, and attributes (\texttt{\_\_attribute\_\_((...))}).
+and ifdefs.
 
 \subsection{Advanced transformations}
 
