Add a user-provided path when searching dynload modules
This feature introduces a new flag --ocaml-lib-search-path to add
a search path for dynamically loadable modules, which allows a user
to use user-implemented modules in the OCaml scripts of the given
semantic patch.

Usage:

$ # 1. Create the module loaded from .cocci.
$ cat loaded_from_cocci.ml
let test_var = "loaded"

$ ocamlopt -shared -o loaded_from_cocci.cmxs loaded_from_cocci.ml

$ # 2. The semantic patch test.cocci refers to the module.
$ cat test.cocci
@initialize:ocaml@ @@
open Loaded_from_cocci

@r@ identifier i; @@
i
@script:ocaml@
i << r.i;
@@
ignore(i);
Printf.printf "%s\n" Loaded_from_cocci.test_var

$ # 3. The --ocaml-lib-search-path option allows to add a
$ #  search path so that Dynlink can find loaded_from_cocci.cmxs.
$ spatch.opt --ocaml-lib-search-path $(pwd) test.cocci test.c
loaded

Signed-off-by: Keisuke Nishimura <keisuke.nishimura@inria.fr>

--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -793,6 +793,12 @@ the source locations that references an integer memory location.
 This database can be inspected with coccilib functions, e.g. to
 control the pattern match process.}
 
+\developer{-{}-ocaml-lib-search-path}{Adds the specified path when searching
+for dynamically loadable modules. The specified path is expected to include
+the loadable module that the OCaml scripts in the semantic patch refer to.
+Also, the module should end with the extension {\tt .cmxs} for native code or
+{\tt .cma} for byte code.}
+
 \subsection{Miscellaneous}
 
 \rare{-{}-quiet}{Suppress most output.  This is the default.}
