explain flambda issue
Thanks to Richard W.M. Jones <rjones@redhat.com> for diagnosing the
problem.

--- a/install.txt
+++ b/install.txt
@@ -30,6 +30,13 @@ On Fedora, install the following packages
  - ocaml-menhir (optional, bundled)
  - ocaml-pcre-devel (optional, bundled)
 
+If your OCaml compiler has been configurated with --enable-flambda,
+compiling the SmPL parser may take a very long time (34 minutes has been
+reported).  This does not cause any problem for running the compiled code.
+Flambda is known to be enabled with the version of OCaml distributed with
+Fedora.  More information about flambda is available at
+https://ocaml.org/manual/5.1/flambda.html
+
 It may be necessary to install libpython2.7-dev
 
 You can try to use the package manager of your distribution to install
