--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -303,6 +303,15 @@ is a concern, then do not use this option.
   ``tests/SCORE\_expected.sexp''. {\bf Warning:} It is intended that not all
   of the test cases provided with Coccinelle actually pass.}
 
+\developer{-{}-cpptestall}{A shortcut for running Coccinelle on all files
+  in a subdirectory {\tt cpptests} (C++ tests) such that there are all of a
+  {\tt .cocci} file, a {\tt .cpp} file, and a {\tt .res} file, where the
+  {\tt .res} contains the expected result.  If the argument
+  -{}-expected-score-file is provided, then that file is used for the
+  result.  Otherwise, the result goes in
+  ``tests/SCORE\_expected.sexp''. {\bf Warning:} It is intended that not
+  all of the test cases provided with Coccinelle actually pass.}
+
 \rare{-{}-test-spacing}{Like -{}-testall, but ensures that the spacing is
   the same as in the .res file.  If the argument
   -{}-expected-spacing-score-file is provided, then that file is used for
