--- a/install.txt
+++ b/install.txt
@@ -82,6 +82,14 @@ Simply run:
  make
  sudo make install
 
+If you prefer using Flatpak, you can build it and install it using:
+
+flatpak run org.flatpak.Builder --force-clean --install \
+  --install-deps-from=flathub --ccache --repo=_flatpak-repo/ \
+  _flatpak-build/ extra/flatpak/fr.inria.Coccinelle.yaml
+
+It will install the `spatch` program as `fr.inria.Coccinelle`.
+
 
 Configuration flags of interest (for the ./configure step):
 --prefix                default: /usr/local
