Add Flatpak manifest
Flatpak is distribution-independent sandboxed package manager backed by
Freedesktop.org and preferred by some developers of Linux desktop
environments like GNOME, KDE or Pantheon.

This change introduces a manifest for building a Flatpak app. This will
be useful for situations where Flatpak is more available or familiar
than OCaml toolchain, such as for most GNOME developers.

For simplicity, the build uses the bundled dependencies.

User can run the following command to build and install Coccinele:

    flatpak run org.flatpak.Builder --force-clean --install \
      --install-deps-from=flathub --ccache --repo=_flatpak-repo/ \
      _flatpak-build/ extra/flatpak/fr.inria.Coccinelle.yaml

Due to Flatpak limitations, the `spatch` program will be exported
as `fr.inria.Coccinelle`.

Eventually, the manifest can serve as source of truth for shipping
Coccinelle in Flathub repository for even wider availability.

Signed-off-by: Jan Tojnar <jtojnar@gmail.com>

--- a/install.txt
+++ b/install.txt
@@ -54,6 +54,14 @@ Then simply type
  make
  sudo make install
 
+If you prefer using Flatpak, you can build it and install it using:
+
+flatpak run org.flatpak.Builder --force-clean --install \
+  --install-deps-from=flathub --ccache --repo=_flatpak-repo/ \
+  _flatpak-build/ extra/flatpak/fr.inria.Coccinelle.yaml
+
+It will install the `spatch` program as `fr.inria.Coccinelle`.
+
 
 Other configuration flags of interest:
 --prefix                default: /usr/local
