small fixes in configure and man pages
Configure update ocaml version check.
Configure check for hevea.
Contact email fix in misc places.
Mention c++ tests and correct example.

Signed-off-by: Michele Martone <michelemartone@users.sourceforge.net>

--- a/docs/pycocci.1
+++ b/docs/pycocci.1
@@ -227,7 +227,7 @@ This will immediately clear old entries from your reflog.
 \fBpycocci\fP and this man page was written by Luis R. Rodriguez <mcgrof@kernel.org>
 
 .SH REPORTING BUGS
-Send a mail to <cocci@systeme.lip6.fr>
+Send a mail to <cocci@inria.fr>
 
 .SH COPYRIGHT
 Copyright 2015, Luis R. Rodriguez
