--- a/docs/spgen.1
+++ b/docs/spgen.1
@@ -158,7 +158,7 @@ that the input script and configuration file are parsable.
 \fBspgen\fP and this man page were written by Chi Pham <chidaph@gmail.com>
 
 .SH REPORTING BUGS
-Send a mail to <cocci@systeme.lip6.fr>
+Send a mail to <cocci@inria.fr>
 
 .SH COPYRIGHT
 Copyright 2015, Chi Pham
