--- a/changes.txt
+++ b/changes.txt
@@ -18,6 +18,7 @@
 - interpret #if, as is done for #ifdef
 - restored support for with-python in configure and support for --python option
   in the command line to use a specific python interpreter
+- Added 'make check-cpp' to run C++-specific tests and get a summary report
 
 ** Bugfix:
 - Add more information in documentation, man pages and wiki
