--- a/docs/dev/README
+++ b/docs/dev/README
@@ -1,3 +1,3 @@
-This directory contains notes related to the developemnt of Coccinelle,
+This directory contains notes related to the development of Coccinelle,
 such as things that are not yet working and should be made working
 improved, etc.
