fixes to documentation and customize cpptests URLs
Signed-off-by: Michele Martone <michelemartone@users.sourceforge.net>

--- a/changes.txt
+++ b/changes.txt
@@ -10,7 +10,7 @@
 - virtual typedef, declarer name, iterator name
 - regexps for type metavariables
 - 'symbol' metadeclaration for C identifiers that are guaranteed not intended as meta variables.
-- allow mixing isomorpisms with normal rules
+- allow mixing isomorphisms with normal rules
 
 ** Features:
 - New scripting languages
