--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -41,7 +41,7 @@ $ spatch -sp_file ex1.cocci *.c
 \end{verbatim}
 
 
-Coccinelle primarily targets ANSI C, and supports some GCC extensions.  It
+Coccinelle primarily targets ANSI C, and supports some GCC extensions, and partially, C++.  It
 has only partial support for K\&R C.  K\&R function declarations are only
 recognized if the parameter declarations are indented.  Furthermore, the
 parameter names are subsequently considered to be type names, due to
