remove last few double slashes in urls

--- a/tools/spgen/documentation/about.tex
+++ b/tools/spgen/documentation/about.tex
@@ -1,5 +1,5 @@
 \subsection{What is \texttt{spgen}?}
-\texttt{spgen} is a \texttt{Coccinelle}\footnote{\url{https://coccinelle.gitlabpages.inria.fr/website//}} metaprogramming tool that can generate hardened semantic patches for use in e.g. the Linux kernel.
+\texttt{spgen} is a \texttt{Coccinelle}\footnote{\url{https://coccinelle.gitlabpages.inria.fr/website/}} metaprogramming tool that can generate hardened semantic patches for use in e.g. the Linux kernel.
 
 Or, in less fancy words, \texttt{spgen} can take your simple \texttt{Coccinelle} script containing one or more rules with \texttt{*}, \texttt{+}, or \texttt{-}, and then output the same script with more options.
 
