update -sp_file to newer --sp-file style in documentation

--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -37,7 +37,7 @@ containing:
 Then to ``apply'' the specified program transformation to a set of C files,
 simply do:
 \begin{verbatim}
-$ spatch -sp_file ex1.cocci *.c
+$ spatch --sp-file ex1.cocci *.c
 \end{verbatim}
 
 
