--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -300,8 +300,8 @@ is a concern, then do not use this option.
   a {\tt .c} file, and a {\tt .res} file, where the {\tt .res} contains the
   expected result.  If the argument -{}-expected-score-file is provided,
   then that file is used for the result.  Otherwise, the result goes in
-  ``tests/SCORE\_expected.sexp''. {\bf Warning:} It is intended that not all
-  of the test cases provided with Coccinelle actually pass.}
+  ``tests/SCORE\_expected.sexp''. Tests whose name ends in "_failure" are
+  known to fail and will not affect the total score.}
 
 \developer{-{}-cpptestall}{A shortcut for running Coccinelle on all files
   in a subdirectory {\tt cpptests} (C++ tests) such that there are all of a
