--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -608,6 +608,9 @@ version of {\bf -{}-partial-match}.}
   that the pattern {\tt f(E)}, with metavariable {\tt E}, matches with {\tt
     E} as {\tt x} will not be considered.}
 
+\rare{-{}-disallow-nested-types}{Analogous to {-{}-disallow-nested-exps},
+  but for types.}
+
 \rare{-{}-no-safe-expressions}{normally, we check that an expression does
        not match something earlier in the disjunction.  But for large
        disjunctions, this can result in a very big CTL formula.  So this
